--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -1,15 +1,21 @@
-.collapsible {
+details {
   padding: 5px;
   border: 2px solid black;
   border-radius: 10px;
   transition: max-height 0.2s ease-out;
+  animation: 1s fadeIn;
+  animation-fill-mode: forwards;
 }
 
-.header {
+summary {
   cursor: pointer;
 }
 
-.body {
-  animation: 1s fadeIn;
-  animation-fill-mode: forwards;
+details[open] summary ~ * {
+  animation: sweep .5s ease-in-out;
+}
+
+@keyframes sweep {
+  0%    {opacity: 0; margin-left: -10px}
+  100%  {opacity: 1; margin-left: 0}
 }
