--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -101,6 +101,19 @@ summary {
   font-size: 1.2rem;
 }
 
+.is_artist_checkbox {
+    margin: auto;
+    width: 100%;
+}
+
+#add_new_user_section {
+    border: black solid 2px;
+    border-radius: 10px;
+    width: 20em;
+    margin-top: 1rem;
+    padding: 0 1rem 1rem 1rem;
+}
+
 #websocket_error_overlay {
     color: black;
     font-size: 200%;
@@ -133,4 +146,12 @@ summary {
 
 .top_error_close {
     cursor: pointer;
+}
+
+#redirect_to_main_container {
+    margin: 2rem;
+    border: black solid 2px;
+    border-radius: 5px;
+    background-color: white;
+    padding: 0 1rem;
 }
