--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -43,14 +43,14 @@ body {
 #commissions {
   width: 100%;
   display: grid;
-  grid-template-columns: 10em auto 1fr;
+  grid-template-columns: 11em auto 1fr;
 }
 
 #my_commissions, #other_commissions, #finished_commissions, .commission_container {
     grid-column: 1 / span 3;
 }
 
-.user_commissions {
+.commission_header {
     grid-column: 1 / span 2;
 }
 
@@ -65,6 +65,10 @@ body {
 
 .commission_description {
     grid-column: 2 / span 2;
+}
+
+.show_hide_commissions_checkbox {
+    margin: auto;
 }
 
 /*#commissions table {*/
@@ -113,6 +117,10 @@ body {
     margin-top: auto;
     margin-bottom: auto;
     margin-left: 1em;
+}
+
+.queue_hidden {
+    color: gray;
 }
 
 details {
@@ -164,6 +172,7 @@ summary {
 
 .action_button {
   font-size: 1.2rem;
+  width: 2.5rem;
   cursor: pointer;
 }
 
