Help files and small tweaks

--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -6,6 +6,12 @@ body {
   background-image: url('/static/moroccan-flower-dark.png');
 }
 
+code {
+    background-color: lightgrey;
+    padding: 0.1rem 0.2rem;
+    border: 1px dashed black;
+}
+
 #content {
   width: 80vw;
   margin: auto;
