Disable auto-refresh when uploading commissions or adding notes

--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -194,6 +194,10 @@ summary {
     cursor: default;
 }
 
+.disabled {
+    color: gray;
+}
+
 .commission_upload_drag {
     background-color: white;
     outline: 2px dashed black;
